Fixed Workflow, added Job Scrapper which pulls jobs from different websites, Fixed the generate CV and Cover letter function