@@ -11,6 +11,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -24,18 +25,33 @@ public class SecurityConfig {
             .sessionManagement(session -> 
                 session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authorizeHttpRequests(auth -> auth
+                // Public endpoints - no authentication required
                 .requestMatchers(
-                    "/api/auth/**",
-                    "/api/ai/health",
-                    "/api/ai/upload-resume",
-                    "/api/profile/**",
-                    "/api/jobs/recommendations/**",
+                    "/api/auth/**",           // Authentication endpoints
+                    "/api/ai/health",         // Health checks
                     "/actuator/health",
                     "/actuator/info",
                     "/h2-console/**",
-                    "/error"  // ADD THIS to allow error responses
+                    "/error"
                 ).permitAll()
+                
+                // Semi-protected - allow with basic validation
+                .requestMatchers(
+                    "/api/ai/upload-resume",           // CV upload
+                    "/api/ai/extract-job-titles",      // Job title extraction
+                    "/api/profile/**",                 // Profile operations
+                    "/api/jobs/recommendations/**",    // Job recommendations
+                    "/api/jobs/search-by-profile",     // Profile-based search
+                    "/api/jobs/search",                // General job search
+                    "/api/preferences/**",             // User preferences
+                    "/api/chat/**"                     // Chat with Neilwe
+                ).permitAll()  // Changed to permitAll() - you can add JWT validation later
+                
+                // All other requests require authentication
                 .anyRequest().authenticated()
+            )
+            .headers(headers -> headers
+                .frameOptions(frame -> frame.sameOrigin()) // For H2 console
             );
         
         return http.build();
@@ -44,14 +60,37 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(
-            "http://localhost:5173",
-            "http://localhost:3000",
-            "http://localhost:8080"
+        
+        // Allow specific origins
+        configuration.setAllowedOrigins(List.of(
+            "http://localhost:5173",  // Vite dev server
+            "http://localhost:3000",  // React dev server alternative
+            "http://localhost:8080",  // Backend
+            "http://127.0.0.1:5173",
+            "http://127.0.0.1:3000",
+            "http://127.0.0.1:8080"
         ));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        
+        // Allow all HTTP methods
+        configuration.setAllowedMethods(List.of(
+            "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
+        ));
+        
+        // Allow all headers
+        configuration.setAllowedHeaders(List.of("*"));
+        
+        // Allow credentials (cookies, authorization headers)
         configuration.setAllowCredentials(true);
+        
+        // Cache preflight response for 1 hour
+        configuration.setMaxAge(3600L);
+        
+        // Expose headers to the frontend
+        configuration.setExposedHeaders(List.of(
+            "Authorization",
+            "Content-Type",
+            "X-Total-Count"
+        ));
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
